@@ -16,7 +16,7 @@ no_AutoPrereq      = 1
 [Prereq / Runtime]
 perl                       = 5.008
 JSON::XS                   = 0
-POE::Component::IRC::State = 6.39
+POE::Component::IRC::State = 6.42
 Proc::Daemon               = 0.02
 Term::ANSIColor            = 0
 YAML::XS                   = 0
