@@ -44,6 +44,7 @@ sub run {
                 irc_snotice
                 irc_notice
                 irc_001
+                irc_identified
                 irc_quit
                 irc_nick
                 irc_join
@@ -212,6 +213,14 @@ sub irc_001 {
     my $irc = $_[SENDER]->get_heap();
     my $nick = $irc->nick_name();
     $self->_status("Logged in to server $server with nick $nick", $irc);
+    return;
+}
+
+sub irc_identified {
+    my ($self) = $_[OBJECT];
+    my $irc = $_[SENDER]->get_heap();
+    my $nick = $irc->nick_name();
+    $self->_status("Identified with NickServ as $nick", $irc);
     return;
 }
 
